--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
   "license": "UNLICENSED",
   "husky": {
     "hooks": {
-      "pre-commit": "echo 'teste'"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/*": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "scripts": {
     "prebuild": "rimraf dist",
@@ -60,6 +66,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
     "jest": "^29.2.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
