--- a/package.json
+++ b/package.json
@@ -5,15 +5,11 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "yarn prettier --write",
-      "yarn eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+      "yarn eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+      "git add"
     ]
   },
   "scripts": {
